添加按钮样式，支持批量扫码

--- a/css/common.css
+++ b/css/common.css
@@ -3,6 +3,9 @@
 	padding: 0;
 	color: #444;
 }
+a,img,button,input,textarea{
+	-webkit-tap-highlight-color:rgba(255,255,255,0);
+}
 a {
 	text-decoration: none;
 }
@@ -190,6 +193,7 @@ header .title {
 .signin .input-item .item-input {
 	display: inline-block;
 	width: 70%;
+	margin-bottom: 15px;
 	vertical-align: top;
 }
 .signin .input-item .item-input input {
@@ -199,8 +203,10 @@ header .title {
 	padding-left: 1em;
 	line-height: 24px;
 	vertical-align: top;
+	font-size: 18px;
 	outline: none;
 	border: none;
+	border-radius: 0;
 	border-bottom: 1px solid #DDDDDD;
 }
 .signin .signin-submit button{
@@ -274,6 +280,7 @@ header .title {
 	border-top: 1px solid #ddd;
 }
 .setting .settingList .item {
+	overflow: hidden;
 	padding: 0 10px;
 	font-size: 18px;
 	line-height: 2em;
@@ -281,4 +288,12 @@ header .title {
 }
 .setting .settingList .item a{
 	display: block;
+}
+.setting .settingList .txt {
+	float: left;
+}
+.setting .settingList .input-wrapper {
+	float: right;
+	line-height: 1;
+	margin-top: 6px;
 }
