--- a/css/common.css
+++ b/css/common.css
@@ -245,6 +245,9 @@ header .title {
 	line-height: 2em;
 	color: #444;
 }
+.forBatchSubmit {
+	display: none;
+}
 
 /* 扫码成功结果 */
 .codeResult .personalMsg {
@@ -258,8 +261,14 @@ header .title {
 	line-height: 1.5em;
 }
 .codeResult .resultList {
-	padding: 10px;
+	box-sizing: border-box;
+	width: 95%;
+	margin: auto;
+	margin-top: 15px;
+	padding:5px 15px;
 	line-height: 2em;
+	background-color: #fff;
+	border-radius: 10px;
 }
 .codeResult .submit button {
 	display: block;
@@ -294,6 +303,7 @@ header .title {
 }
 .setting .settingList .input-wrapper {
 	float: right;
-	line-height: 1;
 	margin-top: 6px;
+	line-height: 1;
+	color: #999;
 }
